<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/listViewAddPill"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        tools:listitem="@android:layout/simple_list_item_1" >

    </ListView>

    <ImageView
        android:id="@+id/add_pill_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:contentDescription="@string/contentdescriptionofpill"
        android:text="@string/take_pill_picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goHome"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/button_home"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="save"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/submit_pill"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>