<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/alarm_pillname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Ibuprofen"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/alarm_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="8:00 AM"
        android:textSize="24sp"
        tools:context=".AlarmMain" />

    <LinearLayout
        android:id="@+id/alarmLayout"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/alarm_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/contentdescriptionofpill"
            android:src="@drawable/pill" />

    </LinearLayout>

    <TextView
        android:id="@+id/alarm_dosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Dosage: Take 1"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/alarm_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Color: White"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/alarm_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Location: Kitchen Counter"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/alarm_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Instructions: Take with Food"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/alarm_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pillTaken"
            android:text="@string/button_taken"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pillMissing"
            android:text="@string/button_cant_find"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pillNoSupply"
            android:text="@string/button_ran_out"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>